# sorta

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.ja.md  README.md  README.ru.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/workflows/: check.yml
data/: landmarks.yaml
data/geo/: admin1.tsv  countries.tsv  names.tsv
docs/: ARCHITECTURE.md
docs/assets/: README.md
docs/guide/: user-guide.en.md  user-guide.ja.md  user-guide.ru.md
scripts/: build_geodata.py  check.py  geo_spike.py  new_worktree.ps1  new_worktree.sh
sorta/: __init__.py  cli.py  config.py  dates.py  dedup.py  events.py  exif.py  faces.py  geo.py  geodata.py  hashing.py  i18n.py  imaging.py  indexer.py  junk.py  landmarks.py  naming.py  progress.py  sorter.py  ui.py
sorta/db/: __init__.py  schema.sql
tests/: conftest.py  test_cli.py  test_config.py  test_dates.py  test_db.py  test_events.py  test_faces.py  test_geo.py  test_geo_online.py  test_geodata.py  test_i18n.py  test_imaging.py  test_indexer.py  test_junk.py  test_naming.py  test_naming_landmarks.py  test_naming_providers.py  test_progress.py  test_sorter.py  test_sorter_copy.py  test_sorter_dedup_delete.py  test_sorter_dedupe.py  test_sorter_exclude.py  test_ui.py  test_ui_album_dest.py  test_ui_albums.py  test_ui_clusters.py  test_ui_dupes.py  test_ui_env.py  test_ui_folder_lang.py  test_ui_i18n.py  test_ui_lightbox_reset.py  test_ui_moves.py  test_ui_photo_trash.py  test_ui_process.py  test_ui_process_browse.py  test_ui_progress_delete_ux.py  test_ui_rerun_optional.py  test_ui_sort.py  test_ui_sort_dest.py  (+2 more)
